--- a/main.css
+++ b/main.css
@@ -119,10 +119,100 @@ footer {
     display: none;
 }
 
+
+.content-container {
+    width: 80vw;
+    margin: 0 auto;
+}
+
+.page-heading {
+    font-size: 68px;
+    text-align: center;
+}
+
+.score-table {
+    width: 80%;
+    font-size: 24px;
+    text-align: center;
+    margin: 5vh auto 0 auto;
+}
+.score-table td {
+    height: 50px;
+    padding: 15px;
+    text-align: left;
+}
+
+.score-table td:last-child {
+    border-radius: 0px 10px 10px 0px;
+}
+
+.score-table td:first-child {
+    border-radius: 10px 0px 0px 10px;
+}
+
+.score-table th {
+    height: 50px;
+    padding: 15px;
+    text-align: left;
+}
+
+.score-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+    color: black;
+}
+
+.result-container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.event-name {
+    font-size: 40px;
+}
+
+ul.winners {
+    margin-left: 25px;
+    list-style-type: none;
+}
+
+ul.winners li {
+    display: block;
+}
+
+span.winner-name {
+    font-size: 25px;
+    margin: 10px 0;
+}
+
+span.winner-points {
+    margin-left: 20px;
+    font-size: 25px;
+    color: #dbdbdb;
+}
+
+.event-container {
+    margin-top: 15px;
+}
+
 @media only screen and (max-width: 630px) {
+    .result-container {
+        margin-top: 4vh;
+    }
+    .event-name {
+        font-size: 30px;
+    }
+
+    .score-table {
+        font-size: 18px;
+    }
     img.logo {
         height: 200px;
         width: 200px;
+    }
+
+    .page-heading {
+        font-size: 42px;
+        text-align: center;
     }
 
     .word {
