--- a/main.css
+++ b/main.css
@@ -194,7 +194,76 @@ span.winner-points {
     margin-top: 15px;
 }
 
+.schedule-container {
+    width: 100%;
+    margin: 5vh auto 0 auto;
+}
+
+.schedule-table {
+    width: 100%;
+    font-size: 24px;
+    margin-top: 5vh;
+    border-collapse: separate;
+    border-spacing: 0 20px;
+}
+
+.schedule-table td {
+    margin: 5vh 0;
+}
+
+.schedule-table td:last-child {
+    text-align: center;
+}
+
+.convenor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.event-post {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+}
+
+.convenor img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    filter: grayscale(1);
+}
+
+.ann img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    filter: grayscale(1)
+}
+
+.co-convenor {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5vh;
+    text-align: center;
+}
+
 @media only screen and (max-width: 630px) {
+    .co-convenor {
+        flex-direction: column;
+    }
+
+    .co-convenor > .ann {
+        margin: 2vh 0;
+    }
+
+    .schedule-container {
+        width: 100%;
+        margin: 5vh 0 0 0;
+    }
+    .schedule-table {
+        width: 100%;
+        font-size: 20px;
+    }
     .result-container {
         margin-top: 4vh;
         width: 100%;
