--- a/main.css
+++ b/main.css
@@ -247,6 +247,41 @@ span.winner-points {
     text-align: center;
 }
 
+.container {
+    display: inline-block;
+    cursor: pointer;
+  }
+
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #999;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+  }
+
+  .change .bar2 {
+    opacity: 0;
+  }
+
+  .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+  }
+
+nav {
+    -webkit-transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
+    height: 100%;
+}
 @media only screen and (max-width: 630px) {
     .co-convenor {
         flex-direction: column;
@@ -318,6 +353,7 @@ span.winner-points {
     li.nav-li{
       margin: 0;
       margin: 2vh 0;
+
     }
 }
 
