--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,10 @@ nav {
         margin: 3vh 0;
     }
 
+    .techie-name {
+        margin: 3vh 0vh !important;
+    }
+
     .schedule-container {
         width: 100%;
         margin: 5vh 0 0 0;
